--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.11.0",
-    "mongoose": "^5.10.12"
+    "mongoose": "^5.10.12",
+    "request": "^2.88.2",
+    "slugify": "^1.4.6",
+    "unique-slug": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
